<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="?android:attr/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorBackground"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbars="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/createAccount"
            android:textColor="?attr/colorSecondary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/registrationMessage"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/createaccount" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/greyblue"
            app:startIconDrawable="@drawable/person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullName"
                android:inputType="textPersonName"
                android:textColor="?attr/colorPrimaryVariant"
                android:textColorHint="@color/greyblue"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/greyblue"
            app:startIconDrawable="@drawable/shop">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/editTextCompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Company Name"
                android:inputType="text"
                android:textColor="?attr/colorPrimaryVariant"
                android:textColorHint="@color/greyblue"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/greyblue"
            app:startIconDrawable="@drawable/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="?attr/colorPrimaryVariant"
                android:textColorHint="@color/greyblue"
                android:textCursorDrawable="@null" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:boxStrokeColor="@color/black"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/greyblue"
            app:startIconDrawable="@drawable/lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="?attr/colorPrimaryVariant"
                android:textColorHint="@color/greyblue"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/greyblue"
            app:startIconDrawable="@drawable/phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPhonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone Number"
                android:inputType="text"
                android:textColor="?attr/colorPrimaryVariant"
                android:textColorHint="@color/greyblue"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="?attr/colorPrimary"
                android:gravity="center_horizontal"
                android:text="Sign Up"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/progressBarSignUp"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/signIn_sup"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>