<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?android:attr/colorBackground"
        android:layout_gravity="center">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:text="Welcome Back"
        android:textColor="?attr/colorSecondary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="Sign In to Continue"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/person" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"

            android:layout_marginRight="20dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/greyblue"
            app:startIconDrawable="@drawable/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmailSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColor="?attr/colorPrimaryVariant"
                android:textColorHint="@color/greyblue"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            app:boxStrokeColor="@color/black"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/greyblue"
            app:startIconDrawable="@drawable/lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPasswordSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="?attr/colorPrimaryVariant"
                android:textColorHint="@color/greyblue"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/signIn"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progressBarSignIn"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />
    </LinearLayout>

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="70dp"
            android:text="@string/signup"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/forgotpassword"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>